[package]
name = "seybio-task-manager"
version = "0.1.1"
edition = "2021"
description = "This lib provides a struc to manage Tasks (ie. for Todo apps)"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serialize = ["serde"]
